# f1-mcp

./: LICENSE  README.md  pyproject.toml
src/f1_mcp/: client.py  server.py
src/f1_mcp/tools/: drivers.py  sessions.py  summary.py  telemetry.py  timing.py
