[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1-mcp"
version = "0.1.0"
description = "MCP Server for Formula 1 data via the OpenF1 API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
f1-mcp = "f1_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/f1_mcp"]
